[tool.poetry]
name = "mutationtesting"
version = "0.1.0"
description = ""
authors = ["Joe <gympro1998@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
polynomial = "^0.21"
mutmut = "^2.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
